--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "amfe-flexible": "^2.2.1",
     "core-js": "^3.6.5",
     "element-plus": "^1.0.1-beta.10",
+    "postcss-adaptive": "^0.5.0",
     "px2rem-loader": "^0.1.9",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
@@ -34,6 +35,7 @@
     "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "^2.0.0-0",
     "chai": "^4.1.2",
+    "dayjs": "^1.9.8",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
