--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "px2rem-loader": "^0.1.9",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.0-0",
+    "vuex-persistedstate": "^4.0.0-beta.1"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
