--- a/package.json
+++ b/package.json
@@ -37,13 +37,17 @@
     "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "^2.0.0-0",
     "chai": "^4.1.2",
+    "compression-webpack-plugin": "^6.1.1",
     "dayjs": "^1.9.8",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
+    "hard-source-webpack-plugin": "^0.13.1",
+    "image-webpack-loader": "^7.0.1",
     "prettier": "^1.19.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "typescript": "~3.9.3"
+    "typescript": "~3.9.3",
+    "webpack-bundle-analyzer": "^4.3.0"
   }
 }
